@@ -2,14 +2,18 @@ Format: https://www.debian.org/doc/packaging-manuals/copyright-format/1.0
 Source: https://github.com/KeepSafe/aiohttp
 
 Files: *
-Copyright: 2013-2015 Nikolay Kim
-           2013-2015 Andrew Svetlov
+Copyright: 2013-2018 Nikolay Kim and Andrew Svetlov
 License: Apache-2
 
 Files: debian/*
 Copyright: 2015 Tianon Gravi <admwiggin@gmail.com>,
-           2015 Piotr Ożarowski <piotr@debian.org>
+           2015-2018 Piotr Ożarowski <piotr@debian.org>
 License: Apache-2
+
+Files: debian/idna_ssl.py
+Copyright: 2018 aio-libs team https://github.com/aio-libs/
+           2017 Ocean S. A. https://ocean.io/ 
+License: Expat
 
 License: Apache-2
  Licensed under the Apache License, Version 2.0 (the "License");
@@ -26,3 +30,22 @@ License: Apache-2
  .
  On Debian systems, the complete text of the Apache version 2.0 license
  can be found in "/usr/share/common-licenses/Apache-2.0".
+
+License: Expat
+ Permission is hereby granted, free of charge, to any person obtaining a copy
+ of this software and associated documentation files (the "Software"), to deal
+ in the Software without restriction, including without limitation the rights
+ to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+ copies of the Software, and to permit persons to whom the Software is
+ furnished to do so, subject to the following conditions:
+ .
+ The above copyright notice and this permission notice shall be included in all
+ copies or substantial portions of the Software.
+ .
+ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+ IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+ OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+ SOFTWARE.
